<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">demo1</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="btn_sch">Buscar</string>
    <string name="btn_list">Boton Lista</string>
    <string name="btn_openActivity">Abrir otra Actividad</string>
    <string name="title_activity_activity_search">Activity_search</string>
    <string name="title_activity_email_activity">Email_Activity</string>
    <string name="btn_add">Agregar</string>
    <string name="txt_ckbox">te Gusta Android? </string>
    <string name="txt_r0">Opcion A</string>
    <string name="txt_r1">Opcion B </string>
    <string name="txt_r2">Opcion C</string>
</resources>