<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/mainConten"
    android:orientation="vertical"
    tools:context=".MainActivity" >
      <EditText
	        android:id="@+id/editTextSerch"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:inputType="text"
	        android:ems="10"
	         >
	<requestFocus />
	        
	    </EditText>
    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content" >
	        
		     <Button
		        android:id="@+id/btnSearch"
		        android:layout_weight="1"
		        android:layout_width="0dp"
		        android:layout_height="wrap_content"
				android:text="@string/btn_sch" />
		
		    <Button
		        android:id="@+id/btnOpen"
		        android:layout_weight="2"
		        android:layout_width="0dp"
		        android:layout_height="wrap_content"
		        android:text="@string/btn_openActivity" />
	    </LinearLayout>
	
        <Button
		        android:id="@+id/btnList"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:text="@string/btn_list" />
</LinearLayout>